compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_rest_deprecated.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 490
expression: "\nfn go(x) {\n  let assert <<_, b:bytes>> = <<1,2,3>>\n}\n"
---
import { makeError, toBitArray } from "../gleam.mjs";

function go(x) {
  let $ = toBitArray([1, 2, 3]);
  if (!($.length >= 1)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $ }
    )
  }
  let b = $.sliceAfter(1);
  return $;
}
