compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_sized_big_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 324
expression: "\nfn go(x) {\n  let assert <<a:16-big>> = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 2)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Assertion pattern match failed",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 2, true, false);
  return x;
}
