compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_sized_big_endian_unsigned.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 335
expression: "\nfn go(x) {\n  let assert <<a:16-big-unsigned>> = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 2)) {
    throw makeError(
      "assignment_no_match",
      "my/mod",
      3,
      "go",
      "Assignment pattern did not match",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 2, true, false);
  return x;
}
