compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_sized_constant_pattern.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  let assert <<1234:16, 123:8>> = x\n}\n"
---
----- SOURCE CODE

fn go(x) {
  let assert <<1234:16, 123:8>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function go(x) {
  if (
    x.byteAt(0) !== 4 ||
    x.byteAt(1) !== 210 ||
    x.byteAt(2) !== 123 ||
    !(x.length == 3)
  ) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
